# axum-rest-example

./: .dockerignore  .envrc  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.org  docker-compose.yml  flake.nix  justfile  rust-toolchain.toml  sqlx-data.json
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: ci.yaml
config/: default.toml  development.toml
migrations/: 20210827152414_create_uuid_extension.down.sql  20210827155158_create_links.down.sql  20210827155158_create_links.up.sql
shared/: grafana-datasources.yaml  otlp.yaml  production.toml  prometheus.yaml  tempo.yaml
src/: config.rs  db.rs  lib.rs  links.rs  main.rs  server.rs  telemetry.rs  test_helpers.rs
