[package]
name = "axum-rest-example"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.53"
axum = { version = "^0.2.3", features = ["headers"] }
base-x = "^0.2.8"
chrono = { version = "^0.4.19", features = ["serde"] }
config = { version = "^0.11.0", features = ["toml"], default-features = false }
hyper = { version = "0.14.16", features = [] }
opentelemetry = { version = "^0.16.0", optional = true, features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "^0.9.0", optional = true, features = ["metrics", "tls", "trace"], default-features = false }
secrecy = { version = "^0.8.0", features = ["serde"] }
serde = { version = "^1.0.129", features = ["derive"] }
serde_json = "^1.0.66"
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "^0.4.8", features = [] }
tower-http = { version = "^0.1.1", features = ["trace"] }
tracing = "^0.1.26"
tracing-opentelemetry = "^0.15.0"
tracing-subscriber = "^0.2.20"
url = { version = "^2.2.2", features = ["serde"] }
uuid = { version = "^0.8.2", features = ["serde", "v4"] }

[dependencies.sqlx]
version = "^0.5.7"
features = [
    "chrono",
    "migrate",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
    "tls",
    "uuid",
]

[features]
default = ["tracing/release_max_level_debug"]
otel = ["opentelemetry", "opentelemetry-otlp", "opentelemetry-otlp/tonic"]
