[package]
name = "axum-rest-example"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.57"
axum = { version = "0.5.6", features = ["headers"] }
base-x = "0.2.10"
chrono = { version = "^0.4.19", features = ["serde"] }
config = { version = "0.13.1", features = ["toml"], default-features = false }
hyper = { version = "0.14.19", features = [] }
opentelemetry = { version = "0.17.0", optional = true, features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.10.0", optional = true, features = ["metrics", "tls", "trace"], default-features = false }
secrecy = { version = "^0.8.0", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.4.12", features = [] }
tower-http = { version = "0.3.3", features = ["trace"] }
tracing = "0.1.35"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
url = { version = "^2.2.2", features = ["serde"] }
uuid = { version = "^0.8.2", features = ["serde", "v4"] }

[dependencies.sqlx]
version = "=0.5.11"
features = [
    "chrono",
    "migrate",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
    "tls",
    "uuid",
]

[features]
default = ["tracing/release_max_level_debug"]
otel = ["opentelemetry", "opentelemetry-otlp", "opentelemetry-otlp/tonic"]
