[package]
name = "axum-rest-example"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.59"
axum = { version = "0.5.13", features = ["headers"] }
base-x = "0.2.11"
chrono = { version = "^0.4.19", features = ["serde"] }
config = { version = "0.13.1", features = ["toml"], default-features = false }
hyper = { version = "0.14.20", features = [] }
opentelemetry = { version = "0.17.0", optional = true, features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.10.0", optional = true, features = ["metrics", "tls", "trace"], default-features = false }
secrecy = { version = "^0.8.0", features = ["serde"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
thiserror = "1.0.32"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.4.13", features = [] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.36"
tracing-opentelemetry = "0.17.4"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
url = { version = "^2.2.2", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[dependencies.sqlx]
version = "=0.6.0"
features = [
    "chrono",
    "migrate",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
    "tls",
    "uuid",
]

[features]
default = ["tracing/release_max_level_debug"]
otel = ["opentelemetry", "opentelemetry-otlp", "opentelemetry-otlp/tonic"]
